k8s/manifests-03c518/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-03c518
  namespace: journee
  labels:
    app: journee-03c518
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-03c518
  template:
    metadata:
      labels:
        app: journee-03c518
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-03c518
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
