k8s/manifests-03c518/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-03c518
  namespace: journee
spec:
  selector:
    app: journee-03c518
  ports:
    - port: 80
      targetPort: 3000
